<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mix &amp; Match</string>
    <string name="action_settings">Settings</string>
    <string name="action_impress">Impress</string>
    <string name="action_reload">Reload</string>
    <string name="action_quit">Quit</string>
    <string name="hello_world">Hello world!</string>
    <string name="buttonLocations">Locations</string>
    <string name="buttonAppointments">Appointments</string>
    <string name="textWelcomeMain">Welcome to Mix&amp;Match</string>
    <string name="title_activity_locations">Locations</string>
    <string name="title_activity_appointments">Appointments</string>
    <string name="title_activity_new_appointment">Create Appointment</string>
    <string name="title_activity_appointments_detail">Details</string>
    <string name="buttonSave">Save</string>
    <string name="buttonNew">+</string>
    <string name="textAppointmentsSubHeader">Your current approved appointments:</string>
    <string name="textAppointmentsHeader">Hello </string>
    <string name="title_activity_location_detail">Location</string>
    <string name="textLocationDetailHeader">Current Appointments in:</string>
    <string name="textLocationDetailHeaderEmptyAppoinments">Currently there are no appointments.</string>
    <string name="dateTimeFormat">MM/dd/yyyy HH:mm</string>
    <string name="restServiceURL">http://ec2-54-246-100-223.eu-west-1.compute.amazonaws.com:8080/mam-backend-0.0.1.BUILD-SNAPSHOT-dev/rest/</string>
    <string name="title_activity_new_appointment2">NewAppointment2Activity</string>
    <string name="textDate">Date</string>
    <string name="textTime">Time</string>
    <string name="title_activity_impress">Impress</string>
    <string name="textImpress">Metafinanz Informationssysteme GmbH \nLeopoldstr. 146 \n80804 München</string>
    <string name="title_activity_settings">Settings</string>
    <string name="textUsername">Username</string>
    <string name="textUsernameDescription">Username (mf-token)</string>
    <string name="textDataserviceDescription">Dataservice</string>
    <string name="textDataservice">Dataservice</string>
    <string name="titleLocationDetailAlertDialog">Hint</string>
    <string name="titleQuitAlertDialog">Quit</string>
    <string name="messageLocationDetailAlertDialog">Maybe a nice function to create a calendar entry for an appointment.</string>
    <string name="messageQuitAlertDialog">Do you really want to quit?</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonOk">OK</string>
    <string name="textAppointmentDetailHeader">Appointment-Details</string>
    <string name="textOwner">Owner</string>

    <string-array name="dataservice_list">
        <item>rest</item>
        <item>local</item>
    </string-array>

</resources>
