<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="18dp"
        android:text="@string/textUsernameDescription"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/textSettingsUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="text|textNoSuggestions"
        android:singleLine="true"
        android:text="@string/textUsername"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textViewSettingsDataService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textSettingsUsername"
        android:layout_below="@+id/textSettingsUsername"
        android:layout_marginTop="16dp"
        android:text="@string/textDataserviceDescription"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/buttonSettingsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSettingsDataService"
        android:layout_below="@+id/spinnerSettingsDataService"
        android:layout_marginTop="42dp"
        android:onClick="save"
        android:text="@string/buttonSave" />

    <Spinner
        android:id="@+id/spinnerSettingsDataService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewSettingsDataService"
        android:layout_below="@+id/textViewSettingsDataService"
        android:layout_marginTop="18dp" />

</RelativeLayout>