<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="0,1,2,3"
    tools:context=".AppointmentsDetailActivity" >
    <LinearLayout >
        <TextView
            android:id="@+id/textAppointmentDetailHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textAppointmentDetailHeader"
            android:textColor="@android:color/black" />
    </LinearLayout>
    <TableRow android:gravity="left">
        <TextView
            android:layout_column="0"
            android:id="@+id/textAppointmentDetailOwner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textOwner"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_column="1"
            android:id="@+id/textAppointmentDetailOwnerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ujr"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_column="2"
            android:id="@+id/textAppointmentDetailDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textDate"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_column="3"
            android:id="@+id/textAppointmentDetailDateValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="11.01.2014"
            android:textColor="@android:color/black" />
    </TableRow>
</TableLayout>    